# PP2

./: .clang-format  .clangd  CoreXApp.tag
cpp/: CMakeLists.txt
cpp/cmake/: FindMySQL.cmake
cpp/src/: CMakeLists.txt
cpp/src/common/: base.cpp  base.hpp  config.cpp  config.hpp  double_buffer.cpp  double_buffer.hpp  packet_crypto.cpp  packet_crypto.hpp  region.cpp  region.hpp  request.cpp  request.hpp  terminal.hpp
cpp/src/common_job/: async_request.cpp  async_request.hpp  job.cpp  job.hpp
cpp/src/common_mysql/: mysql_core.cpp  mysql_core.hpp  mysql_core_bind.hpp
cpp/src/common_protocol/: challenge.hpp  client_auth.cpp  client_auth.hpp  data_exchange.cpp  data_exchange.hpp  geo_info.cpp  geo_info.hpp  network.cpp  network.hpp  protocol.cpp  protocol.hpp  protocol_binary.cpp  protocol_binary.hpp  protocol_buffers.cpp  protocol_buffers.hpp  terminal.cpp  terminal.hpp
cpp/src/common_server_group/: server_group.cpp  server_group.hpp
cpp/src/common_web_service/: http_server.cpp  http_server.hpp  ws_server.cpp  ws_server.hpp
cpp/src/component/: dns_service.cpp  dns_service.hpp  geo_ip.cpp  geo_ip.hpp  relay_service.hpp  static_ip_table.cpp  static_ip_table.hpp  terminal_controller_service.cpp  terminal_controller_service.hpp  terminal_service.cpp  terminal_service.hpp
cpp/src/profiler/: base.cpp  base.hpp  proxy_relay_profiler.cpp  proxy_relay_profiler.hpp
cpp/src/server_auth/: _main.cpp  auth_cache.cpp  auth_cache.hpp  auth_request.hpp  demo_user.cpp  demo_user.hpp  request.cpp  request.hpp
cpp/src/server_auth_2/: _main.cpp
cpp/src/server_dns/:  _main.cpp  _main.cpp  audit.cpp  audit.hpp  dns_cache.cpp  dns_cache.hpp  dns_job.cpp  dns_job.hpp  dns_server.cpp  dns_server.hpp
cpp/src/server_dummy_relay/: _main.cpp
cpp/src/server_geoip/: README.txt  _main.cpp
cpp/src/server_proxy/: _main.cpp  audit.cpp  audit.hpp  auth.hpp  global.cpp  global.hpp  proxy_access.cpp  proxy_access.hpp  proxy_dispatcher_client.cpp  proxy_dispatcher_client.hpp  proxy_relay_client.cpp  proxy_relay_client.hpp  proxy_service.cpp  proxy_service_http.cpp  proxy_service_s5.cpp
cpp/src/server_proxy_access/: _main.cpp  audit.cpp  audit.hpp  auth.cpp  proxy_access.hpp  proxy_service.cpp
cpp/src/server_terminal/: _main.cpp  challenge.cpp  challenge.hpp  control.cpp  control.hpp  global.cpp  global.hpp
cpp/src/server_terminal_manager/: _main.cpp  terminal_record.cpp  terminal_record.hpp
cpp/src/server_terminal_relay/: _main.cpp  terminal_relay.cpp  terminal_relay.hpp
cpp/src/test/: _main.cpp
cpp/src/test_consumer/: main.cpp
cpp/src/test_db/: main.cpp
cpp/src/test_delay/: main.cpp
cpp/src/test_dns_query/: _main.cpp
cpp/src/test_geoip/: main.cpp
cpp/src/test_observer/: main.cpp
cpp/src/test_tcp_show/: _main.cpp
cpp/src/test_tel_s5/: _main.cpp
cpp/src_app/: CMakeLists.txt
cpp/src_app/lib_backend_connection/: backend_connection_pool.cpp  backend_connection_pool.hpp
cpp/src_app/lib_client/: server_id.cpp  server_id.hpp  server_list.cpp  server_list.hpp  server_register.cpp  server_register.hpp
cpp/src_app/lib_component/: audit_service.cpp  audit_service.hpp  auth_abstract.cpp  auth_abstract.hpp  auth_local.cpp  auth_local.hpp  auth_local_service.cpp  auth_local_service.hpp  device_abstract.hpp  device_future.cpp  device_future.hpp  dns_local_service.cpp  dns_local_service.hpp  local_message_queue.cpp  local_message_queue.hpp  pa_abstract.hpp  pa_future.hpp  pa_local.cpp  pa_local.hpp  pa_local_relay_service.cpp  pa_local_relay_service.hpp  pa_service.cpp  pa_service.hpp  relay_abstract.hpp  relay_device_service.cpp  relay_device_service.hpp  relay_local_binding_device.cpp  relay_local_binding_device.hpp  relay_local_binding_service.cpp  relay_local_binding_service.hpp  relay_local_device_service.cpp  relay_local_device_service.hpp  relay_object_manager.cpp  relay_object_manager.hpp  relay_remote_device.hpp  relay_remote_device_service.cpp  relay_remote_device_service.hpp  relay_server_reporter.cpp  relay_server_reporter.hpp  request_mapping.cpp  (+15 more)
cpp/src_app/lib_util/: local_relay_info_manager.cpp  local_relay_info_manager.hpp  rdkafka_producer.cpp  rdkafka_wrapper.cpp  rdkafka_wrapper.hpp  server_bootstrap.cpp  server_bootstrap.hpp  service_bootstrap.cpp  service_bootstrap.hpp  service_client_pool.cpp  service_client_pool.hpp
cpp/src_app/s_address_test/: main.cpp
cpp/src_app/s_address_to_device/: main.cpp
cpp/src_app/s_audit_collector/: main.cpp  reporter.cpp  reporter.hpp
cpp/src_app/s_config_center/: _config.cpp  _config.hpp  _main.cpp  ip_location.cpp  ip_location.hpp  relay_node.hpp
cpp/src_app/s_device_state_relay/: _main.cpp  config.cpp  config.hpp  income.cpp  income.hpp  output.cpp  output.hpp  relay.cpp  relay.hpp
cpp/src_app/s_dispatcher/: main.cpp
cpp/src_app/s_dns/: main.cpp  readme.txt
cpp/src_app/s_local_proxy_relay/: main.cpp  pa_local_service.cpp  pa_local_service.hpp
cpp/src_app/s_relay/: context_manager.cpp  context_manager.hpp  device_service.cpp  device_service.hpp  global.cpp  global.hpp  main.cpp  pa_service.cpp  pa_service.hpp  relay_report.cpp  relay_report.hpp  report.cpp  report.hpp
cpp/src_app/s_relay_id_client/: main.cpp  relay_id_client.cpp  relay_id_client.hpp
cpp/src_app/s_relay_id_manager/: main.cpp
cpp/src_app/s_relay_id_master/: main.cpp
cpp/src_app/s_relay_info_dispatcher/: _main.cpp  config.cpp  config.hpp  observer_port.cpp  observer_port.hpp  relay_port.cpp  relay_port.hpp
cpp/src_app/s_server_id_center/: main.cpp
cpp/src_app/s_server_list/: main.cpp  mindef.hpp
cpp/src_app/s_small_server_list/: main.cpp
cpp/src_app/s_small_server_list_slave/: main.cpp
cpp/src_app/s_target_collector/: info.txt  main.cpp  reporter.cpp  reporter.hpp
cpp/src_app/t_dns_client/: main.cpp
cpp/src_app/t_echo_client/: main.cpp
cpp/src_app/t_echo_server/: main.cpp
cpp/src_app/t_lang/: main.cpp
cpp/src_lib_common/: CMakeLists.txt
cpp/src_lib_db/: CMakeLists.txt  mysql_core.cpp  mysql_core.hpp  mysql_core_bind.hpp  mysql_core_stmt.cpp  mysql_core_stmt.hpp
cpp/src_lib_protocol/: CMakeLists.txt
(+81 files in other folders)
